# Kladovka-Manager

./: .gitignore  CMakeLists.txt  KladovkaProject.pro  Kladovki.sqlite  README.md  UML_Description.qmodel  UML_Description_V1.0.qmodel  addressKladovki.sqlite  adressKladovki.sqlite  allInfoKladovki.sqlite  allthingsmenu.cpp  allthingsmenu.h  changeitempositionmenu.cpp  changeitempositionmenu.h  eventswithkladovkamenu.cpp  eventswithkladovkamenu.h  insertdeletemenu.cpp  insertdeletemenu.h  logger.cpp  logger.h  main.cpp  mainmenu.cpp  mainmenu.h  newkladovkamenu.cpp  newkladovkamenu.h  openkladovkamenu.cpp  openkladovkamenu.h  settingsmenu.h  sqlengine.cpp  sqlengine.h  widgetmanager.cpp  widgetmanager.h
allthingsmenu/: allthingsmenu.cpp  allthingsmenu.h
changeitempositionmenu/: changeitempositionmenu.cpp  changeitempositionmenu.h
eventswithkladovkamenu/: eventswithkladovkamenu.cpp  eventswithkladovkamenu.h
insertdeletemenu/: insertdeletemenu.h
logger/: logger.cpp  logger.h
mainmenu/: mainmenu.cpp  mainmenu.h
newkladovkamenu/: newkladovkamenu.cpp  newkladovkamenu.h
openkladovkamenu/: openkladovkamenu.cpp  openkladovkamenu.h
settingsmenu/: settingsmenu.cpp  settingsmenu.h
sqlengine/: sqlengine.cpp  sqlengine.h
widgetmanager/: widgetmanager.cpp  widgetmanager.h
